# PublicAI-RegX

./: README.md  docker-compose.dev.yml
ckan/: Dockerfile
ckan-docker/: .env  .env.example  docker-compose.dev.yml
ckan-docker/ckan/: Dockerfile.dev
ckan-docker/src/ckanext-regx/: pyproject.toml  requirements.txt  setup.cfg  test.ini
ckan-docker/src/ckanext-regx/.github/workflows/: test.yml
ckan-docker/src/ckanext-regx/ckanext/regx/: model.py  plugin.py  views.py
ckan-docker/src/ckanext-regx/ckanext/regx/assets/: script.js
ckan-docker/src/ckanext-regx/ckanext/regx/controllers/: admin_controller.py  admin_user_controller.py  claim_profile_controller.py  company_controller.py  fetch_company_controller.py  search_company_controller.py
ckan-docker/src/ckanext-regx/ckanext/regx/lib/: ckan_api.py  database.py  google_search.py  process_company_data.py  run_data_retrieval.py  thread.py  thread_manager.py
ckan-docker/src/ckanext-regx/ckanext/regx/logic/: validators.py
ckan-docker/src/ckanext-regx/ckanext/regx/public/css/: claim_form.css
ckan-docker/src/ckanext-regx/ckanext/regx/public/js/: script.js
ckan-docker/src/ckanext-regx/ckanext/regx/scripts/scrape-data/Gesellschaft für Haus- und Grundstückspflege mbH/: meta.json
ckan-docker/src/ckanext-regx/ckanext/regx/scripts/scrape-data/Kemmlit-Bauelemente GmbH/: meta.json
ckan-docker/src/ckanext-regx/ckanext/regx/scripts/scrape-data/audi/: meta.json
ckan-docker/src/ckanext-regx/ckanext/regx/scripts/scrape-data/jysk/: meta.json
ckan-docker/src/ckanext-regx/ckanext/regx/templates/: admin_all_profiles.html  company_form.html  edit_company1.html  index.html  search_company.html  side_nav.html  update_claim_form.html  view_claimants.html  view_profile.html
ckan-docker/src/ckanext-regx/ckanext/regx/tests/: test_helpers.py  test_plugin.py  test_views.py
ckan-docker/src/ckanext-regx/ckanext/regx/tests/logic/: test_validators.py
regx_ckan/: .env  plugin.py.py  requirements.txt
(+58 files in other folders)
