; # This file should only contain setuptools related configuration to build the
; # extension (i.e. arguments to setup() in setup.py). Add any other project
; # information should go to pyproject.toml instead.
; #
; # TODO: migrate Babel options to pyproject.toml when it's better supported


; [options]
; packages = find:
; namespace_packages = ckanext
; install_requires =
; include_package_data = True

; [options.entry_points]
; babel.extractors =
;                  ckan = ckan.lib.extract:extract_ckan

; [options.extras_require]

; [extract_messages]
; keywords = translate isPlural
; add_comments = TRANSLATORS:
; output_file = ckanext/regx/i18n/ckanext-regx.pot
; width = 80

; [init_catalog]
; domain = ckanext-regx
; input_file = ckanext/regx/i18n/ckanext-regx.pot
; output_dir = ckanext/regx/i18n

; [update_catalog]
; domain = ckanext-regx
; input_file = ckanext/regx/i18n/ckanext-regx.pot
; output_dir = ckanext/regx/i18n
; previous = true

; [compile_catalog]
; domain = ckanext-regx
; directory = ckanext/regx/i18n
; statistics = true


[metadata]
name = ckanext-regx
version = 0.0.1
description = A CKAN extension for demonstration purposes

[options]
packages = find:
include_package_data = True

[options.entry_points]
ckan.plugins =
    regx = ckanext.regx.plugin:RegxPlugin
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/regx/i18n/ckanext-regx.pot
width = 80

[init_catalog]
domain = ckanext-regx
input_file = ckanext/regx/i18n/ckanext-regx.pot
output_dir = ckanext/regx/i18n

[update_catalog]
domain = ckanext-regx
input_file = ckanext/regx/i18n/ckanext-regx.pot
output_dir = ckanext/regx/i18n
previous = true

[compile_catalog]
domain = ckanext-regx
directory = ckanext/regx/i18n
statistics = true
